--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 }
 
 .container {
-    background-color: rgb(26, 25, 25);
+    /* background-color: rgb(26, 25, 25); */
+    background: linear-gradient(45deg, rgba(103, 0, 103, 0.688), rgb(48, 48, 240));
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -25,6 +26,7 @@
 }
 
 .calculatorBody {
+    background: linear-gradient(45deg, rgb(36, 36, 204), rgb(187, 36, 36));
     border: 2px solid red;
     width: 14vw;
     height: 46vh;
@@ -76,7 +78,7 @@
     height: 50px;
     border: none;
     border-radius: 100%;
-    background-color: rgb(50, 37, 37);
+    background-color: rgb(0 0 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +114,7 @@
 }
 
 .diff {
-    background-color: rgb(69, 61, 61);
+    background-color: rgb(24, 23, 23);
 }
 
 .operation {
